feat(app): update to finished product

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-body{
+body {
   font-family: 'Cabin', sans-serif;
 
   overflow: hidden;
@@ -9,10 +9,10 @@ body{
   justify-content: center;
   align-items: center;
 
-  background: lightgray;
+  background: steelblue;
 }
 
 h1 {
-  color: slategray;
+  color: azure;
   font-size: 40vh;
 }
